# pvrec

./: CMakeLists.txt  FindPROSILICA.cmake  readme.txt
cmake/: FindCFITSIO.cmake
src/: cmdopts.cpp  cmdopts.h  fitswriter.cpp  fitswriter.h  pvrec.cpp  pvutils.cpp  pvutils.h  recorder.cpp  recorder.h  version.h.in
